--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
-% rebase('base.tpl')
+{% extends 'base.tpl' %}
+{% block base %}
 <div id="head" class="justify">
   <div id="callingcard" class="small card">
     <img alt="Tom's hat" src="img/pink_hat_icon-200.png" />
@@ -34,3 +35,4 @@
     </ul>
   </div>
 </div>
+{% endblock %}
