--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,6 @@
         <input value="Search" type="submit" />
       </form>
     </nav>
-    {{!base}}
+    {% block base %}{% endblock %}
   </body>
 </html>
