--- a/templates/exclaim-index.html
+++ b/templates/exclaim-index.html
@@ -1,5 +1,5 @@
 <ul>
-  % for article in articles:
-  <li><a href="{{article['endpoint']}}">{{article['endpoint']}}</a></li>
-  % end
+  {% for article in articles %}
+  <li><a href="{{ article.endpoint }}">{{ article.endpoint }}</a></li>
+  {% endfor %}
 </ul>
