--- a/templates/mail-thread.html
+++ b/templates/mail-thread.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block base %}
 {% if message %}
 <div class="heading">
   <h3>{{message.subject}}</h3>
@@ -32,7 +32,6 @@
   {% endif %}
   <ul>
     {% for thread in threads %}
-    aoeu
     <ul>
     {% for message in thread %}
       {% include 'mail-subthread.html' %}
@@ -46,3 +45,4 @@
   <em>Only the first 100 threads are displayed; refine your search to see more results.</em>
   {% endif %}
 </div>
+{% endblock %}
