--- a/templates/mail-thread.html
+++ b/templates/mail-thread.html
@@ -6,10 +6,7 @@
   <p>From <a href="/@/{{message.from}}">{{message.from}}</a></p>
   <p>To <a href="/@/{{message.to}}">{{message.to}}</a></p>
   <p>
-    {{message.weekday}},
-    <a href="/@/date:{{message.notmuchmonth}}..{{message.notmuchmonth}}">{{message.month}}</a>
-    <a href="/@/date:{{message.notmuchday}}..{{message.notmuchday}}">{{message.day}}</a>,
-    {{message.year}},
+    <a href="/@/date:{{message.notmuchdate}}..{{message.notmuchdate}}">{{message.date}}</a>
     at {{message.time}}
   </p>
   <br/>
