--- a/templates/article-notmuch.html
+++ b/templates/article-notmuch.html
@@ -1,6 +1,7 @@
-From: replace-this-with-a-random-thing-for-security-reasons
+From: {{notmuch_secret}}
 To: {{endpoint}}
 Subject: {{title}}
+Date: {{modified}}
 Message-Id: <{{endpoint}}@dada-portal>
 
 {{body|safe}}
