--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
+        <li><a href="/schedule/">Schedule</a></li>
+        <li><a href="/@/">Mail</a></li>
         <li><a href="/+/?q=date:1W..">News</a></li>
       </ul>
       <form action="/+/" method="get">
