--- a/templates/mail-index.html
+++ b/templates/mail-index.html
@@ -17,7 +17,7 @@
 <h2>Inconveniences</h2>
 <p>
   Here are two things I don't like about the present setup in my
-  <a href="https://pypi.python.org/pypi/dada-portal">dada-portal</a>,
+  <a href="http://small.dada.pink/dada-portal">dada-portal</a>,
   which is adapted from
   <a href="https://pypi.python.org/pypi/ejnug">ejnug</a>.
 </p>
