--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,9 @@
         <li><a href="/@/">Mail</a></li>
         <li><a href="/+/?q=date:1W..">News</a></li>
       </ul>
-      <form action="/+/" method="get">
-        <input name="q" type="text" value="{{q|default:''}}" />
-        {% if hide_emails %}
-        <input name="hide_emails" type="hidden" />
-        {% endif %}
-        <input value="Search" type="submit" />
-      </form>
+      {% block top_search %}
+      {% include 'search-form.html' %}
+      {% endblock %}
     </nav>
     {% block base %}{% endblock %}
     {% if hit_id %}<script>{% include 'track.js' %}</script>{% endif %}
