--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block top_search %}{% endblock %}
 {% block base %}
 <div id="head" class="justify">
   <div id="callingcard" class="small card">
@@ -7,18 +8,7 @@
     <a rel="me" href="mailto:_@thomaslevine.com">_@thomaslevine.com</a>
   </div>
 </div>
-<div id="popular" class="justify">
-  {% for article in popular %}
-  <div class="popular small card">
-    {% if article.image %}
-    <a href="{{article.endpoint}}" title="{{article.title}}">
-      <img src="{{article.image}}" alt="{{article.title}}" />
-    </a>
-    {% else %}
-    <h2><a href="{{article.endpoint}}">{{article.title}}</a></h2>
-    <p>{{article.description}}</p>
-    {% endif %}
-  </div>
-  {% endfor %}
-</div>
+
+Add a background image of me?
+{% include 'search-form.html' %}
 {% endblock %}
