--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,8 @@
 {% extends 'base.html' %}
 {% block top_search %}{% endblock %}
 {% block base %}
-<div id="head" class="justify">
-  <div id="callingcard" class="small card">
-    <img alt="Tom's hat" src="img/pink_hat_icon-200.png" />
-    <a rel="me" href="">thomas levine</a>
-    <a rel="me" href="mailto:_@thomaslevine.com">_@thomaslevine.com</a>
-  </div>
+<div style="background-image: url(static/background-images/2014-12-11.jpg);">
 </div>
 
-Add a background image of me?
 {% include 'search-form.html' %}
 {% endblock %}
