--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/static/style.css" type="text/css" />
   </head>
   <body>
-    <nav>
+    <nav id="navigation">
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/schedule/">Schedule</a></li>
