--- a/templates/search-form.html
+++ b/templates/search-form.html
@@ -1,4 +1,4 @@
-<form action="/+/" method="get">
+<form action="/+/" method="get" class="search-form">
   <input name="q" type="text" value="{{q|default:''}}" />
   {% if hide_emails %}
   <input name="hide_emails" type="hidden" />
