--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block top_search %}{% endblock %}
 {% block base %}
-<div style="background-image: url(static/background-images/2014-12-11.jpg);">
+<div id="index-main" style="background-image: url(static/background-images/2014-12-11.jpg);">
+  <div class="search">
+    <h1>Thomas Levine's Dada Portal</h1>
+    {% include 'search-form.html' %}
+  </div>
 </div>
-
-{% include 'search-form.html' %}
 {% endblock %}
