--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
     <title>Dada Portal | {{title|default:'Thomas Levine'}}</title>
     <link rel="stylesheet" href="/static/style.css" type="text/css" />
   </head>
-  <body>
+  {% block bodytag %}<body>{% endblock %}
     <nav id="navigation">
       <ul>
         <li><a href="/">Home</a></li>
