--- a/templates/search-form.html
+++ b/templates/search-form.html
@@ -1,7 +1,7 @@
 <form action="/+/" method="get" class="search-form">
-  <input name="q" type="text" value="{{q|default:''}}" />
+  <input name="q" type="text" value="{{q|default:''}}" placeholder="Search for dada." />
   {% if hide_emails %}
   <input name="hide_emails" type="hidden" />
   {% endif %}
-  <input value="Search" type="submit" />
+  <input value="Go" type="submit" />
 </form>
