--- a/static/style.css
+++ b/static/style.css
@@ -18,15 +18,13 @@ h1, h2, h3, h4, h5, h6 {
 a, h1, h2, h3, h4, h5, h6 {
   text-decoration: none;
   color: #fe57a1;
-}
-a:hover {
-  text-decoration: underline;
-}
-article h1, article h2, article h3, article h4, article h5, article h6 {
   page-break-after: avoid;
   margin-top: 0.5em;
   margin-bottom: 0;
   font-weight: inherit;
+}
+a:hover {
+  text-decoration: underline;
 }
 h1, h2 { font-size: 2em; font-weight: bold; }
 h3 { font-size: 1.5em; font-weight: bold; }
@@ -98,6 +96,11 @@ nav .search-form {
 #index-main .search h1 {
   text-align: center;
   height: 40px;
+  margin: 0;
+}
+
+article ul {
+  margin-left: 2em;
 }
 
 @media print {
