--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 {% block base %}
 <div class="search">
-  <h1>Thomas Levine's Dada Portal</h1>
+  <h1>Dada Portal</h1>
   {% include 'search-form.html' %}
 </div>
 {% endblock %}
