--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,9 @@
 <div class="search">
   <h1>Dada Portal</h1>
   {% include 'search-form.html' %}
+  <ul>
+    <li><a href="/popular/">Popular articles</a></li> |
+    <li><a href="/+/?date:1W..&hide_email=">Recent updates</a></li>
+  </ul>
 </div>
 {% endblock %}
