--- a/templates/mail-index.html
+++ b/templates/mail-index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block base %}
+<article>
 <h1>Tom makes some emails public</h1>
 <p>
   It's a lot easier for me to find things if they're on the public internet,
@@ -36,4 +37,5 @@
   which are the most interesting. If I just expose an RSS feed of the recent
   messages, we can use ordinary RSS readers for this.
 </p>
+</article>
 {% endblock %}
