--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
   <h1>Dada Portal</h1>
   {% include 'search-form.html' %}
   <ul>
-    <li><a href="/popular/">Popular articles</a></li> |
-    <li><a href="/+/?date:1W..&hide_email=">Recent updates</a></li>
+    <li><a href="/popular/">Popular articles</a></li> &bull;
+    <li><a href="/+/?q=date:1W..&amp;hide_emails=">Recent updates</a></li>
   </ul>
 </div>
 {% endblock %}
