--- a/static/style.css
+++ b/static/style.css
@@ -32,6 +32,9 @@ p {
   margin-top: 0.5em;
   margin-bottom: 0;
 }
+pre {
+  white-space: pre-wrap;
+}
 pre, blockquote, .line-block /* rst class */ {
   padding: 0.5em;
   margin: 1em;
