--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,9 @@
     <nav id="navigation">
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/schedule/">Schedule</a></li>
-        <li><a href="/@/">Mail</a></li>
         <li><a href="/+/?q=date:1W..">News</a></li>
+        <li><a href="/schedule/">Schedule</a></li>
+        <li><a href="/!/about/">About</a></li>
       </ul>
       {% block top_search %}
       {% include 'search-form.html' %}
