simpler popular thing for now

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   <h1>Dada Portal</h1>
   {% include 'search-form.html' %}
   <ul>
-    <li><a href="/popular/">Popular articles</a></li> &bull;
+    <li><a href="/!/popular/">Popular articles</a></li> &bull;
     <li><a href="/+/?q=date:1W..&amp;hide_emails=">Recent updates</a></li>
   </ul>
 </div>
