--- a/templates/article.html
+++ b/templates/article.html
@@ -4,10 +4,10 @@
   {{body|safe}}
 </article>
 
-<div id="pagination">
+<footer>
     <em>created at strftime('%B %d, %Y') rescue ''</em>
     = link_to('View source', 'https://github.com/tlevine/www.thomaslevine.com/tree/master/content' + @item.identifier + 'index.md')
     = if @item[:other_source] then link_to('Other source', @item[:other_source])
     = link_to('Discuss', @item[:tweet_link] || 'https://twitter.com/thomaslevine')
-</div>
+</footer>
 {% endblock %}
